# govee_lights

./: .gitignore  GOVEE_BLE.md  GOVEE_LAN.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml
custom_components/govee-ble-lights/: __init__.py  config_flow.py  govee_api.py  govee_ble.py  light.py  manifest.json  strings.json
custom_components/govee-ble-lights/translations/: en.json  et.json
custom_components/govee_lights/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  govee.py  govee_ble.py  govee_lan.py  light.py  manifest.json  strings.json
custom_components/govee_lights/translations/: en.json  et.json
